--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
 		"axios": "^0.19.2",
 		"classnames": "^2.2.6",
 		"jwt-decode": "^3.0.0-beta.2",
+		"moment": "^2.29.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-moment": "^1.0.0",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.0",
